--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -318,64 +318,117 @@
     "storageService": {
       "baseUrl": "{{ getv "/ansyn/storage/baseurl" "http://platform.ansyn.io:8081/api/store" }}"
     },
-    "translation": {
-    	"default": {
-		 	"Sentinel-2A": "Sentinel 2A",
-		 	"alg_1": "name 1",
-		 	"alg_2": "name 2",
-		 	"geoRegistered": "Geo Registered",
-		 	"notGeoRegistered": "Not Geo Registered",
-			"poorGeoRegistered": "Poor Geo Registered"
-	   	},
-	   	"component": {
-		  "Pin": "הצמד",
-		  "Unpin": "בטל הצמדה",
-		  "Filters": "סינון",
-		  "Tools": "כלים",
-		  "Data Layers": "שכבות מידע",
-		  "Default": "ברירת מחדל",
-		  "Annotation Layers": "שכבות אנטוציות",
-		  "Show all": "הצג הכל",
-		  "only": "הצג בלבד",
-		  "Import layer": "ייבא שכבה",
-		  "Create new layer": "צור שכבה חדשה",
-		  "Shadow mouse cursor": "",
-		  "Go To": "עבור אל",
-		  "Automatic Processing - Grayscale Images Only": "תיקון אוטמטי - תמונות גוון אפור בלבד",
-		  "Manual Image Enhancement": "תיקון תמונות ידני",
-		  "Display Overlays": "הצג שכבות",
-		  "Annotations": "אנטוציות",
-		  "Measure Distance": "מדוד מרחק",
-		  "reset": "אפס",
-		  "Reset all": "אפס הכל",
-		  "Sharpness": "חדות",
-		  "Contrast": "ניגודיות",
-		  "Brightness": "בהירות",
-		  "Gamma": "גמא",
-		  "Saturation": "רוויה",
-		  "Go": "עבור למיקום",
-		  "Pin location": "נעץ סיכה",
-		  "Heat Map": "מפת חום",
-		  "Overlays Footprint": "הצג עקבות",
-		  "Point": "נקודה",
-		  "LineString": "קו",
-		  "Polygon": "מצולע",
-		  "Circle": "עיגול",
-		  "Rectangle": "ריבוע",
-		  "Arrow": "חץ",
-		  "Width": "עובי",
-		  "Color": "צבע",
-		  "Fill": "מילוי",
-		  "Stroke": "גבול",
-		  "Measures": "מדוד",
-		  "Label": "תווית",
-		  "Delete": "מחק",
-		  "Show only favorites": "הצג רק מעודפים"
-		}
-    },
 	 "httpTimeout": "3000",
 	 "isFooterCollapsible": {{ getv "/ansyn/iscollapsible" "false" }}
   },
+  "translateConfig": {
+	"default": {
+		"Sentinel-2A": "Sentinel 2A",
+		"alg_1": "name 1",
+		"alg_2": "name 2",
+		"geoRegistered": "Geo Registered",
+		"notGeoRegistered": "Not Geo Registered",
+		"poorGeoRegistered": "Poor Geo Registered",
+		"Ok": "אישור",
+		"Cancel": "ביטול"
+	},
+	"component": {
+	  "Pin": "הצמד",
+	  "Unpin": "בטל הצמדה",
+	  "Filters": "סינון",
+	  "Tools": "כלים",
+	  "Data Layers": "שכבות מידע",
+	  "Default": "ברירת מחדל",
+	  "Annotation Layers": "שכבות אנטוציות",
+	  "Show all": "הצג הכל",
+	  "only": "הצג בלבד",
+	  "Import layer": "ייבא שכבה",
+	  "Create new layer": "צור שכבה חדשה",
+	  "Shadow mouse cursor": "",
+	  "Go To": "עבור אל",
+	  "Automatic Processing - Grayscale Images Only": "תיקון אוטמטי - תמונות גוון אפור בלבד",
+	  "Manual Image Enhancement": "תיקון תמונות ידני",
+	  "Display Overlays": "הצג הדמיות",
+	  "Annotations": "אנטוציות",
+	  "Measure Distance": "מדוד מרחק",
+	  "reset": "אפס",
+	  "Reset all": "אפס הכל",
+	  "Sharpness": "חדות",
+	  "Contrast": "ניגודיות",
+	  "Brightness": "בהירות",
+	  "Gamma": "גמא",
+	  "Saturation": "רוויה",
+	  "Go": "עבור למיקום",
+	  "Pin location": "נעץ סיכה",
+	  "Heat Map": "מפת חום",
+	  "Overlays Footprint": "הצג עקבות",
+	  "Point": "נקודה",
+	  "LineString": "קו",
+	  "Polygon": "מצולע",
+	  "Circle": "עיגול",
+	  "Rectangle": "ריבוע",
+	  "Arrow": "חץ",
+	  "Width": "עובי",
+	  "Color": "צבע",
+	  "Fill": "מילוי",
+	  "Stroke": "גבול",
+	  "Measures": "מדוד",
+	  "Label": "תווית",
+	  "Delete": "מחק",
+	  "Show only favorites": "הצג רק מעודפים",
+	  "Search": "חפש",
+	  "Couldn't find any results.": "לא נמצאו תוצאות.",
+	  "Loading": "טוען",
+	  "SHOW MORE": "הצג עוד",
+	  "SHOW LESS": "הצג פחות",
+	  "Sensor Type": "סוג סנסור",
+	  "Sensor Name": "שם הסנסור",
+	  "Source Type": "סוג",
+	  "Geo Registration": "מעוגן",
+	  "Resolution": "רזולוציה",
+	  "Cloud Coverage": "עננות",
+	  "geoRegistered": "מעוגן",
+	  "notGeoRegistered": "לא מעוגן",
+	  "poorGeoRegistered": "מעוגן חלקי",
+	  "Reset list": "אפס רשימה",
+	  "Show manually filtered overlays": "הצג הדמיות מסוננות",
+	  "Base Map": "מפת עולם",
+	  "Back to base map": "חזור למפת עולם",
+	  "Momentarily link screens": "סנכרן מפות",
+	  "Show/ Hide layers": "הצג/החבא שכבות",
+	  "Move": "גרור",
+	  "Restore overlay": "שחזר הדמיה",
+	  "Remove overlay": "הסר הדמיה",
+	  "Remove from overlays quick loop": "הסר מהצגה מהירה",
+	  "Add to overlays quick loop": "הוסף להצגה מהירה",
+	  "Remove from favorites": "מחק ממועדפים",
+	  "Add to favorites": "הוסף למועדפים",
+	  "Overlay orientation": "כיון הדמיה",
+	  "Geo filter": "צורת חיפוש",
+	  "Edit Geo filter": "ערוך חיפוש",
+	  "Show/hide Geo filter": "הצג/החבא חיפוש",
+	  "Time filter": "סינון זמן",
+	  "Data Input Filter": "סנן סנסורים",
+	  "Edit time filter": "ערוך מסנן זמן",
+	  "Screen number": "מספר מפות",
+	  "Overlay count": "מונה הדמיות",
+	  "Previous overlay": "הדמיה קודמת",
+	  "Next overlay": "הדמיה הבאה",
+	  "Reset timeline (according to the time filter)": "אפס ציר זמן(על פי מסנן הזמן)",
+	  "Expand timeline": "הרחב ציר זמן",
+	  "Next overlay from the quick loop (key: Q)": "הדמיה הבאה מתצוגה מהירה(Q)",
+	  "Align North": "יישר לצפון",
+	  "User Perspective": "לפי משתמש",
+	  "Imagery Perspective": "לפי הדמייה",
+	  "Start - End": "התחלה-סוף",
+	  "Start time:": "התחלה",
+	  "End time:": "סוף",
+	  "Disabled": "מושבת",
+	  "Sentinel": "סנטינל",
+	  "SkySatScene": "סקיסט",
+	  "Sentinel-2A": "סנטינל 2"
+	}
+},
   "olConfig": {
   	 "needToUseLayerExtent": false,
 	 "tilesLoadingDoubleBuffer": {
