--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
@@ -78,11 +78,11 @@ div.control-buttons {
 			font-weight: bold;
 		}
 		&:first-child {
-			margin-right: 9px;
 			width: 42px;
 		}
 		&:last-child {
 			width: 17px;
+			margin: 0 9px;
 		}
 	}
 	.error {
