--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
@@ -1,7 +1,7 @@
 <div class="container" [ngClass]="collection.type">
 
 	<div class="title-row">
-		<span class="title">{{translate.get(collection.type + ' Layers') | async}}</span>
+		<span class="title">{{collection.type + ' Layers' | translate}}</span>
 
 		<div class="actions">
 			<button [@rotateArrow]="show"
@@ -13,10 +13,10 @@
 				<span (click)="showAll()">Show all</span>
 			</div>
 
-			<ansyn-import-layer  [attr.tooltip-value]="translate.get('Import layer') | async" tooltip-class="bottom right"></ansyn-import-layer>
+			<ansyn-import-layer  [attr.tooltip-value]="'Import layer' | translate" tooltip-class="bottom right"></ansyn-import-layer>
 
 			<button class="add-layer" (click)="openModal(SelectedModalEnum.edit)"
-					[attr.tooltip-value]="translate.get('Create new layer') | async" tooltip-class="bottom right">
+					[attr.tooltip-value]="'Create new layer' | translate" tooltip-class="bottom right">
 				<i class="icon-layer-add"></i>
 			</button>
 
