--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.html
@@ -1,15 +1,15 @@
 <div class="image-processing-container">
-	<div class="resetAll" (click)="resetParams()">{{translate.get('Reset all') | async}}</div>
+	<div class="resetAll" (click)="resetParams()">{{'Reset all' | translate}}</div>
 	<ul class="image-processing-options">
 		<li *ngFor="let param of params">
-			<label [for]="'image-processing-' + param">{{translate.get(param.name) | async}}</label><br>
+			<label [for]="'image-processing-' + param">{{param.name | translate}}</label><br>
 			<input [id]="'image-processing-' + param"
 				   type="range"
 				   [min]="param.min"
 				   [max]="param.max"
 				   [ngModel]="imageManualProcessArgs[param.name]"
 				   (ngModelChange)="updateParam($event, param.name)">
-			<button class="button-reset" (click)="resetOne(param)">{{translate.get('reset') | async}}</button>
+			<button class="button-reset" (click)="resetOne(param)">{{'reset' | translate}}</button>
 		</li>
 	</ul>
 </div>
