--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.html
@@ -49,10 +49,10 @@
 
 	<div class="buttons-area">
 
-		<button ansynButton type="submit" [disabled]="form.invalid || disabled">{{translate.get('Go') | async}}</button>
+		<button ansynButton type="submit" [disabled]="form.invalid || disabled">{{'Go' | translate}}</button>
 		<button [disabled]="disabled" class="pin-location" type="button" (click)="togglePinLocation()"
 				[class.active]="pinLocationMode">
-			<span>{{translate.get('Pin location') | async}}</span>
+			<span>{{'Pin location' | translate}}</span>
 			<i class="icon-tools-pin"></i>
 		</button>
 	</div>
