add geo server provider to cesium

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -175,7 +175,7 @@
   		"defaultMapSource": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}"
   	},
   	"CesiumMap": {
-  		"defaultMapSource": "BING_CESIUM"
+  		"defaultMapSource": "CESIUM_BING"
   	}
   },
   "mapSourceProvidersConfig": {
@@ -201,6 +201,10 @@
     	"maxZoom": 16,
     	"tileSize": 512,
     	"attributions": "Copyright:© 2013 ESRI, i-cubed, GeoEye"
+    },
+    "CESIUM_GEO_SERVER": {
+    	"layers": ["Hydrography:bores"],
+    	"url": "https://nationalmap.gov.au/proxy/http://geoserver.nationalmap.nicta.com.au/geotopo_250k/ows"
     }
   },
   "filtersConfig": {
