--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
@@ -78,10 +78,10 @@ div.control-buttons {
 			font-weight: bold;
 		}
 		&:first-child {
-			margin-right: 9px;
 			width: 42px;
 		}
 		&:last-child {
+			margin: 0 9px;
 			width: 17px;
 		}
 	}
