--- a/src/app/@ansyn/ansyn/modules/core/components/manual-removed-overlays/manual-removed-overlays.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/manual-removed-overlays/manual-removed-overlays.component.html
@@ -3,7 +3,7 @@
 		<ansyn-slider-checkbox [checked]="!removedOverlaysVisibility"
 							   (checkedChange)="showRemoved()"></ansyn-slider-checkbox>
 		<div class="show-hide-filtered-overlays-text">
-			<span>Show manually filtered overlays ({{removedOverlaysCount}})</span>
+			<span>{{'Show manually filtered overlays' | translate}} ({{removedOverlaysCount}})</span>
 		</div>
 	</div>
 	<div class="reset-list">
