--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
@@ -1,7 +1,7 @@
 <div class="tools-menu-item-container">
 	<div>
 		<button tooltip-class="right"
-				tooltip-value="Shadow mouse cursor"
+				[attr.tooltip-value]="'Shadow mouse cursor' | translate"
 				(click)="toggleShadowMouse()"
 				[class.mode-on]="onShadowMouse && !shadowMouseDisabled"
 				[disabled]="shadowMouseDisabled">
@@ -11,7 +11,7 @@
 
 	<div>
 		<button tooltip-class="right"
-				tooltip-value="Go To"
+				[attr.tooltip-value]="'Go To' | translate"
 				(click)="toggleSubMenu(subMenuEnum.goTo)"
 				[class.active]="isExpand(subMenuEnum.goTo) && !isGeoOptionsDisabled"
 				[disabled]="isGeoOptionsDisabled">
@@ -22,7 +22,7 @@
 
 	<div class="image-auto-processing">
 		<button tooltip-class="right"
-				tooltip-value="Automatic Processing - Grayscale Images Only"
+				[attr.tooltip-value]="'Automatic Processing - Grayscale Images Only' | translate"
 				(click)="toggleAutoImageProcessing()"
 				[class.mode-on]="onAutoImageProcessing && !imageProcessingDisabled"
 				[disabled]="imageProcessingDisabled">
@@ -32,7 +32,7 @@
 
 	<div class="image-manual-processing">
 		<button tooltip-class="right"
-				tooltip-value="Manual Image Enhancement"
+				[attr.tooltip-value]="'Manual Image Enhancement' | translate"
 				(click)="toggleSubMenu(subMenuEnum.manualImageProcessing)"
 				[class.mode-on]="isImageControlActive && !imageManualProcessingDisabled"
 				[class.active]="isExpand(subMenuEnum.manualImageProcessing) && !imageManualProcessingDisabled"
@@ -44,7 +44,7 @@
 	</div>
 	<div class="display-overlay-visualizer">
 		<button tooltip-class="right"
-				tooltip-value="Display Overlays"
+				[attr.tooltip-value]="'Display Overlays' | translate"
 				(click)="toggleSubMenu(subMenuEnum.overlays)"
 				[disabled]="isGeoOptionsDisabled"
 				[class.mode-on]="displayModeOn && !isGeoOptionsDisabled"
@@ -61,7 +61,7 @@
 
 	<div class="user-annotations" [class.active]="isExpand(subMenuEnum.annotations)">
 		<button tooltip-class="right"
-				tooltip-value="Annotations"
+				[attr.tooltip-value]="'Annotations' | translate"
 				[class.active]="isExpand(subMenuEnum.annotations) && !isGeoOptionsDisabled"
 				(click)="toggleSubMenu(subMenuEnum.annotations)"
 				[disabled]="!(isActiveAnnotationLayer$ | async) || isGeoOptionsDisabled">
@@ -73,7 +73,7 @@
 
 	<div class="distance-measure-tool">
 		<button tooltip-class="right"
-				tooltip-value="Measure Distance"
+				[attr.tooltip-value]="'Measure Distance' | translate"
 				(click)="toggleMeasureDistanceTool()"
 				[disabled]="isGeoOptionsDisabled"
 				[class.mode-on]="onMeasureTool && !isGeoOptionsDisabled">
