--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
@@ -51,11 +51,11 @@
 					font-weight: bold;
 				}
 				&:first-child {
-					margin-right: 9px;
 					width: 42px;
 				}
 				&:last-child {
 					width: 17px;
+					margin: 0 9px;
 				}
 			}
 		}
