--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
@@ -6,12 +6,12 @@
 			[ngModel]="layer?.name"
 			select
 			name="name"
-			label="Name">
+			[label]="'Name' | translate">
 		</ansyn-input>
 
 		<div class="bottom-btns">
-			<button type="button" (click)="closeModal()">Cancel</button>
-			<button [disabled]="!layerName.value?.trim()">OK</button>
+			<button type="button" (click)="closeModal()">{{'Cancel' | translate}}</button>
+			<button [disabled]="!layerName.value?.trim()">{{'Ok' | translate}}</button>
 		</div>
 	</form>
 </div>
