--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -1,7 +1,7 @@
 <div class="selected-layer"
 	 *ngIf="(annotationLayerIds$ | async)?.length > 1">
 	<div>
-		Layer:
+		{{'Layer' | translate}}:
 		<select class="active-annotation-layer" (change)="setSelectedAnnotationLayer($event.target.value)">
 			<option
 				[selected]="(activeAnnotationLayer$ | async) === layer?.id"
