--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.html
@@ -1,10 +1,10 @@
 <div class="edit-layer">
 	<form class="edit-layer-form" (ngSubmit)="removeLayer()">
-		<h4 [title]="layer?.name"><i class="icon-delete"></i>&nbsp;Delete&nbsp;"<span>{{ layer?.name }}</span>"?</h4>
+		<h4 [title]="layer?.name"><i class="icon-delete"></i>&nbsp;{{'Delete' | translate}}&nbsp;"<span>{{ layer?.name }}</span>"?</h4>
 
 		<div class="bottom-btns">
-			<button type="button" (click)="closeModal()">Cancel</button>
-			<button>OK</button>
+			<button type="button" (click)="closeModal()">{{'Cancel' | translate}}</button>
+			<button>{{'OK' | translate}}</button>
 		</div>
 	</form>
 </div>
