--- a/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.html
@@ -9,9 +9,9 @@
 		<ng-template #textAlert>
 			<div
 				[style.background]="alert.background"
-				[attr.tooltip-value]="alert.text"
+				[attr.tooltip-value]="alert.text | translate"
 				[attr.tooltip-class]="mapsAmount === 1 ? 'top left': 'bottom left'">
-				{{ alert.text }}
+				{{ alert.text | translate}}
 			</div>
 		</ng-template>
 
